@@ -45,7 +45,6 @@ struct lookup_context {
 int lookup_version = AUTOFS_LOOKUP_VERSION;	/* Required by protocol */
 
 exports rpc_get_exports(const char *host, long seconds, long micros, unsigned int option);
-exports rpc_exports_prune(exports list);
 void rpc_exports_free(exports list);
 
 int lookup_init(const char *mapfmt, int argc, const char *const *argv, void **context)
@@ -206,9 +205,6 @@ done:
 	debug(ap->logopt, MODPREFIX "fetchng export list for %s", name);
 
 	exp = rpc_get_exports(name, 10, 0, RPC_CLOSE_NOLINGER);
-
-	/* Check exports for obvious ones we don't have access to */
-	/*exp = rpc_exports_prune(exp);*/
 
 	mapent = NULL;
 	while (exp) {
